--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,11 @@
         "target": "es2016",
         "module": "ESNext",
         "esModuleInterop": true,
+        "declarationDir": ".dts",
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "declaration": true,
+        "declarationMap": true
     }
 }
