--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint ./src",
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
-    "pre-commit": "eslint src/",
+    "pre-commit": "eslint src/**",
     "commit-msg": "commitlint -e $1",
     "prepare-commit-msg": "echo ''"
   },
@@ -34,6 +34,7 @@
     "@types/chai": "^4.3.11",
     "@types/eslint": "^8.56.1",
     "@types/mocha": "^10.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@web/dev-server-esbuild": "^1.0.1",
     "@web/test-runner": "^0.18.0",
     "@web/test-runner-puppeteer": "^0.15.0",
